--- a/4]. Projects/Data Science/Python/Machine Learning Projects/02)_Random_Forest_Classifier/RandomForestClassifier.ipynb
+++ b/4]. Projects/Data Science/Python/Machine Learning Projects/02)_Random_Forest_Classifier/RandomForestClassifier.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "RandomForestClassifier.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyNPdbZEEZupLA+l3M1Btpf2",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/maanasvi999/RandomForestClassifier/blob/main/RandomForestClassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -86,18 +69,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "phNrtWhkWCgp"
       },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -106,14 +90,8 @@
         "id": "bZQsTBkMWrlQ",
         "outputId": "8f537fd0-59ff-452a-cfe1-b655abd10c4e"
       },
-      "source": [
-        "df_data = pd.read_csv('dataset.csv')\n",
-        "df_data.head()"
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -213,13 +191,19 @@
               "4  66  36  40    20.130175  81.604873  7.628473  262.717340  rice"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df_data = pd.read_csv('dataset.csv')\n",
+        "df_data.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -228,16 +212,10 @@
         "id": "fns0a1a_W3BV",
         "outputId": "4714f5f4-58f7-481a-de23-c450b4487419"
       },
-      "source": [
-        "#To get info about the data set\n",
-        "df_data.info()\n",
-        "df_data.describe()"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 2000 entries, 0 to 1999\n",
@@ -257,7 +235,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -386,46 +363,52 @@
               "[8 rows x 7 columns]"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "#To get info about the data set\n",
+        "df_data.info()\n",
+        "df_data.describe()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "bUYAbydmXcjP"
       },
+      "outputs": [],
       "source": [
         "X = df_data[['N', 'P', 'K','humidity','temperature','ph','rainfall']]\n",
         "y = df_data['label']"
-      ],
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "id": "YrJ0Ces3XdRj"
       },
+      "outputs": [],
       "source": [
         "#Import from sklearn.model_selection\n",
         "from sklearn.model_selection import train_test_split"
-      ],
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "R5tWh8qJXdUL"
       },
+      "outputs": [],
       "source": [
         "# dividing X, y into train and test data\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
-      ],
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -438,32 +421,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "VQq1POw6XdXh"
       },
+      "outputs": [],
       "source": [
         "#Random Forest Classifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "clf = RandomForestClassifier(n_estimators=100)"
-      ],
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "RmufUjZ2XuL1"
       },
+      "outputs": [],
       "source": [
         "#Train the model using the training sets\n",
         "clf.fit(X_train,y_train)\n",
         "y_pred = clf.predict(X_test)"
-      ],
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -471,20 +455,19 @@
         "id": "c1HyL4wgXwwt",
         "outputId": "d7a4ae88-d478-4e3e-999f-e5f3288dac92"
       },
-      "source": [
-        "# Model Accuracy\n",
-        "from sklearn import metrics\n",
-        "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
-      ],
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Accuracy: 0.9966666666666667\n"
           ]
         }
+      ],
+      "source": [
+        "# Model Accuracy\n",
+        "from sklearn import metrics\n",
+        "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
       ]
     },
     {
@@ -516,6 +499,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -523,20 +507,19 @@
         "id": "eoBicw3hO2t6",
         "outputId": "91a2f468-6cf5-42aa-8495-f729ec0bf7c9"
       },
-      "source": [
-        "data = np.array([[104,18, 30, 23.603016, 60.3, 6.7, 140.91]])\n",
-        "prediction = clf.predict(data)\n",
-        "print(prediction)"
-      ],
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['coffee']\n"
           ]
         }
+      ],
+      "source": [
+        "data = np.array([[104,18, 30, 23.603016, 60.3, 6.7, 140.91]])\n",
+        "prediction = clf.predict(data)\n",
+        "print(prediction)"
       ]
     },
     {
@@ -545,7 +528,7 @@
         "id": "cp9NFk2rbQ_z"
       },
       "source": [
-        "> Sure Decision Tree Classifier can be used, but if you remember the definition of Random Forest Classifer, it shows which algorithm gives a better accuracy!\n"
+        "> Sure Decision Tree Classifier can be used, but if you remember the definition of Random Forest Classifier, it shows which algorithm gives a better accuracy!\n"
       ]
     },
     {
@@ -559,21 +542,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "KJdSxxXuT6Ps"
       },
+      "outputs": [],
       "source": [
         "#Decision Tree Classifier\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "dfc = DecisionTreeClassifier()\n",
         "dfc.fit(X_train, y_train)\n",
         "y_pred = dfc.predict(X_test)"
-      ],
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -581,20 +565,19 @@
         "id": "lyZQ-ECvUjO2",
         "outputId": "31044c46-d4eb-4a67-8cae-f7f111f522d8"
       },
-      "source": [
-        "# Model Accuracy\n",
-        "from sklearn import metrics\n",
-        "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
-      ],
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Accuracy: 0.99\n"
           ]
         }
+      ],
+      "source": [
+        "# Model Accuracy\n",
+        "from sklearn import metrics\n",
+        "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
       ]
     },
     {
@@ -612,5 +595,22 @@
         "\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNPdbZEEZupLA+l3M1Btpf2",
+      "include_colab_link": true,
+      "name": "RandomForestClassifier.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
